# health-ai-governance-auditor

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: METHODOLOGY.md  sample-output.md
docs/releases/: v0.1.1.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md
samples/: sample_dental_msp.json  sample_intake_minimal.json  sample_inventory.json  sample_inventory_remediated.json
scripts/: verify.py
src/healthai_audit/: __init__.py  __main__.py  audit.py  auto.py  cli.py  dashboard.py  decisions.py  diff.py  evidence.py  intake.py  kit_bridge.py  packet.py  packs.py  remediation.py  safety.py  schema.py  templates.py  verify_evidence.py
tests/: test_audit.py
